syntax = "proto3";

package cart.v1;
option go_package = "github.com/titan-commerce/backend/cart-service/proto/cart/v1";

message CartItem {
  string product_id = 1;
  string variant_id = 2;
  int32 quantity = 3;
  double price = 4;
}

message Cart {
  string cart_id = 1;
  string user_id = 2;
  repeated CartItem items = 3;
  double total = 4;
}

message AddItemRequest {
  string user_id = 1;
  string product_id = 2;
  string variant_id = 3;
  int32 quantity = 4;
}

message AddItemResponse {
  Cart cart = 1;
}

message GetCartRequest {
  string user_id = 1;
}

message GetCartResponse {
  Cart cart = 1;
}

service CartService {
  rpc AddItem(AddItemRequest) returns (AddItemResponse);
  rpc GetCart(GetCartRequest) returns (GetCartResponse);
}
